--- a/arduino/platformio.ini
+++ b/arduino/platformio.ini
@@ -1,3 +1,8 @@
 [env:nanoatmega328]
 platform = atmelavr
 board = nanoatmega328
+framework = arduino
+
+lib_deps =
+    OneWire
+    DallasTemperature
