--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "mqtt": "^4.1.0",
-    "serialport": "^9.0.0"
+    "serialport": "^9.0.0",
+    "systeminformation": "^4.26.9"
   }
 }
